--- a/Branch-TestBed/Branch-TestBed-UITests/UITestBed/UITestBed.entitlements
+++ b/Branch-TestBed/Branch-TestBed-UITests/UITestBed/UITestBed.entitlements
@@ -4,9 +4,9 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:branch-uitestbed.app.link</string>
-		<string>applinks:branch-uitestbed.test-app.link</string>
-		<string>applinks:branch-uitestbed-alternate.app.link</string>
+		<string>applinks:q8j1-sojanpr.branchbeta.link</string>
+		<string>applinks:q8j1-sojanpr.test-branchbeta.link</string>
+		<string>applinks:q8j1-sojanpr-alternate.branchbeta.link</string>
 	</array>
 </dict>
 </plist>
